fixed label overlapping with textfield border

--- a/src/components/input/input.module.css
+++ b/src/components/input/input.module.css
@@ -6,3 +6,10 @@
     margin-left: 1% !important;
     margin-top: 0% !important;
 }
+.label {
+    margin-top: -4px;
+    margin-left: -5px;
+    padding-left: 5px !important;
+    padding-right: 5px !important;
+    background-color: white;
+}
