--- a/src/components/stockInput/stockInput.module.css
+++ b/src/components/stockInput/stockInput.module.css
@@ -1,9 +1,9 @@
 .rectangle {
     position: relative; 
     display: inline-block;
-    top: 510px;
+    top: 555px;
     /* -767 -830*/
-    margin-left: 701px;
+    margin-left: 741px;
     height: 370px; 
     width: 300px;   
     border-radius: 5px;
